K8S-Study/dockerweb/dockerweb-service-without-nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jeff-dockerweb-webapp
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: jeff-dockerweb
  ports:
    - name: http
      port: 8080
      nodePort: 30080
  type: NodePort
 
#    type: NodePort
