K8S-Study/dockerweb/dockerweb-ingress-v3.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: tomcat-dockerweb-ingress-v3
spec:
  selector:
    matchLabels:
      app: tomcat-dockerweb-ingress-v3
  replicas: 2 # Update the replicas from 2 to 4
  template:
    metadata:
      labels:
        app: tomcat-dockerweb-ingress-v3
    spec:
      containers:
        - name: tomcat-dockerweb-ingress-v3
          image: jeffwang/tomcat-dockerweb:1.0
          ports:
            - containerPort: 8080      
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-dockerweb-ingress-v3
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: tomcat-dockerweb-ingress-v3
  ports:
  - port: 8080 
    targetPort: 8080
    name: p8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: tomcat-dockerweb-ingress
   annotations:
     #nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   rules:
   - host: minikube-ingress.com
     http:
       paths:
        - backend:
           serviceName: tomcat-dockerweb-ingress-v3
           servicePort: 8080
